changed prepareBusybox script by Florian